# zephyr-googletest-example

./: README.md  west.yml
modules/googletest/: CMakeLists.txt  Kconfig
tests/lib/gtest-example/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/gtest-example/service/: tst_Service.cpp
tests/lib/gtest-example/src/: main.cpp
